--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".view.LoginActivity">
 
     <TextView
         android:id="@+id/textViewTitle"
@@ -25,7 +25,7 @@
         android:layout_weight="3">
 
         <EditText
-            android:id="@+id/editTextEmail"
+            android:id="@+id/editTextEmailReg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
@@ -40,7 +40,7 @@
             android:layout_margin="20dp"
             android:hint="@string/password"
             android:inputType="textPassword"
-            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextEmailReg" />
 
         <Button
             android:id="@+id/buttonLogin"
@@ -49,7 +49,7 @@
             android:layout_margin="20dp"
             android:background="@android:color/holo_blue_light"
             android:text="@string/login"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
         <LinearLayout
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingStart="20dp"
-            android:paddingTop="5dp"
+            android:paddingTop="15dp"
             android:paddingEnd="20dp"
             app:layout_constraintTop_toBottomOf="@+id/buttonLogin">
 
@@ -67,17 +67,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_weight="1"
+                android:textSize="16sp"
                 android:text="@string/forgot_password"
-                android:textColor="@color/black"
                 app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 
             <TextView
                 android:id="@+id/textViewRegister"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
                 android:gravity="end"
-                android:text="@string/register"
-                android:textColor="@color/black" />
+                android:text="@string/register" />
 
         </LinearLayout>
 
