--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:textAlignment="center"
         android:text="@string/forgot_password"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="40sp"
